--- a/uwsgi-stat-example/etc/nginx/sites-enabled/01-stat.conf
+++ b/uwsgi-stat-example/etc/nginx/sites-enabled/01-stat.conf
@@ -1,6 +1,6 @@
 server {
     listen   80;
-    server_name 185.31.161.64;
+    server_name 127.0.0.1 185.31.161.64;
     location / { 
         include uwsgi_params;
         uwsgi_pass unix:/var/run/uwsgi/app/stat/socket;
